# FlowHook

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  filewatcher  filewatcher.cpp  filewatcher.h  main.cpp  test1.txt  vcpkg.json
.github/workflows/: tests.yml
cli/src/: main.cpp
cli/src/commands/: add.cpp  check.cpp  init.cpp  list.cpp  remove.cpp  run.cpp  set.cpp
cli/tests/: test_add.sh  test_cli.sh  test_helpers.sh  test_init.sh  test_list.sh  test_remove.sh  test_run.sh  test_set.sh
include/: display.h  filewatcher.h  flowhook_core.h  macros.hpp  session_logger.h  task_runner.h  task_watcher.h
include/error/: error.h  result.h
src/: config_manager.cpp  display.cpp  filewatcher.cpp  flowhook_core.cpp  main.cpp  session_logger.cpp  task_runner.cpp  task_watcher.cpp  version.h.in
src/include/: config_manager.h  display.h  filewatcher.h  flowhook_core.h  macros.hpp  session_logger.h  task_runner.h  types.h
src/include/error/: error.h  result.h
tests/: config_test.h
tests/integration/: test_flowhook_core.cpp
tests/unit/: test_config_manager.cpp  test_filewatcher.cpp  test_session_logger.cpp  test_task_runner.cpp
